--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
             <artifactId>guice-multibindings</artifactId>
             <version>${guice-build}</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/com.google.inject.extensions/guice-assistedinject -->
+        <dependency>
+            <groupId>com.google.inject.extensions</groupId>
+            <artifactId>guice-assistedinject</artifactId>
+            <version>${guice-build}</version>
+        </dependency>
+
+
         <!-- https://mvnrepository.com/artifact/javax.inject/javax.inject -->
         <dependency>
             <groupId>javax.inject</groupId>
